Fri Jun 12 11:50:04 METDST 1998   Raphael Manfredi <Raphael_Manfredi@grenoble.hp.com>

. Description:

	Added workaround for persistent LVALUE-ness in perl5.004. All
	scalars tagged as being an lvalue are handled as if they were
	not an lvalue at all.  Added test for that LVALUE bug workaround.

	Now handles Perl immortal scalars explicitely, by storing &sv_yes
	as such, explicitely.

	Retrieval of non-immortal undef cannot be shared. Previous
	version was over-optimizing by not creating a separate SV for
	all undefined scalars seen.

Thu Jun  4 17:21:51 METDST 1998   Raphael Manfredi <Raphael_Manfredi@grenoble.hp.com>

. Description:

	Baseline for Storable-0.6@0.

	This version introduces a binary incompatibility in the generated
	binary image, which is more compact than older ones by approximatively
	15%, depending on the exact degree of sharing in your structures.

	The good news is that your older images can still be retrieved with
	this version, i.e. backward compatibility is preserved. This version
	of Storable can only generate new binaries however.

	Another good news is that the retrieval of data structure is
	significantly quicker than before, because a Perl array is used
	instead of a hash table to keep track of retrieved objects, and
	also because the image being smaller, less I/O function calls are
	made.

Tue May 12 09:15:15 METDST 1998   Raphael Manfredi <Raphael_Manfredi@grenoble.hp.com>

. Description:

	Version number now got from Storable.pm directly.

	Fixed overzealous sv_type() optimization, which would make
	Storable fail when faced with an "upgraded" SV to the PVIV
	or PVNV kind containing a reference.

Thu Apr 30 15:11:30 METDST 1998   Raphael Manfredi <Raphael_Manfredi@grenoble.hp.com>

. Description:

	Extended the SYNOPSIS section to give quick overview of the
	routines and their signature.

	Optimized sv_type() to avoid flags checking when not needed, i.e.
	when their type makes it impossible for them to be refs or tied.