@@ -103,15 +103,15 @@ similar benchmarking have been made with Storable-0.6 and higher,
 which use a different binary image and appear to be much faster at
 retrieve time.
 
-Comparison of Storable-0.5@9 and Storable-0.6@0 on a version of
-Tom Christiansen's MTG database (1.9 Mb in native 0.5 format, 1. Mb
-only in 0.6 format) give:
+Comparison of Storable-0.5@9 and Storable-0.6@1 on a version of
+Tom Christiansen's MTG database (1.8 Mb in native 0.5 format, 1.6 Mb
+only in 0.6 format) gives:
 
     Version    Storable Image   "store"    "nstore"   "retrieve"
                  Size in Mb     in Kb/s     in Kb/s     in Kb/s
 
 	 0.5@9          1.817         801         701         692
-	 0.6@0          1.526         668         634         909
+	 0.6@1          1.526         692         655         929
 
 Kb/s rates refer to the size of the Storable image. Since the image
 is shorter with version 0.6, we must normalize the results to compare
@@ -122,7 +122,7 @@ takes to store/retrieve the same database. We get:
                  Size in Mb     in secs     in secs     in secs
 
 	 0.5@9          1.817         2.32        2.65        2.69
-	 0.6@0          1.526         2.33        2.46        1.75
+	 0.6@1          1.526         2.26        2.39        1.69
 
 Notice the important gain at retrieval time, due to the fact that we
 now use an array instead of a hash table to keep track of retrieved
@@ -145,7 +145,8 @@ Thanks to:
 	Jarkko Hietaniemi <jhi@iki.fi>
 	Ulrich Pfeifer <pfeifer@charly.informatik.uni-dortmund.de>
 	Benjamin A. Holzman <benjamin.a.holzman@bender.com>
-	Andrew Ford <andrew@icarus.demon.co.uk>
+	Andrew Ford <A.Ford@ford-mason.co.uk>
 	Gisle Aas <gisle@aas.no>
+	Jeff Gresham <gresham_jeffrey@jpmorgan.com>
 
 for their contributions.
